--- a/Projekt01/styles.css
+++ b/Projekt01/styles.css
@@ -1,10 +1,12 @@
 html {
   scroll-behavior: smooth;
+  width: 100%;
 }
 
 body {
   margin: 0;
   background-color: #464646;
+  text-align: center;
 }
 
 header {
@@ -119,10 +121,12 @@ h1 {
 
 table {
   width: 100%;
+  max-width: 100%;
   border-collapse: collapse;
   margin: 20px 0;
   background-color: #fff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  overflow-x: auto;
 }
 
 thead {
@@ -187,13 +191,25 @@ header nav a:hover {
 section {
   background: rgba(165, 165, 165, 0.5);
   padding: 20px;
+  max-width: 700px;
   margin: 3rem auto;
   border-radius: 8px;
-  max-width: 800px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 section ul {
   padding-left: 20px;
   list-style-type: disc;
+}
+
+@media (max-width: 768px) {
+  .menu {
+    display: grid;
+    padding: 0;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  section {
+    max-width: 75%;
+  }
 }
